<resources>
    <string name="app_name">Benefit</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Уведомления</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="LoginNavHost">LoginNavHost</string>
    <string name="registration">Регистрация</string>
    <string name="enter_with_phone_number">Войти по номеру телефона</string>
    <string name="enter_phone_number">Введите номер телефона:</string>
    <string name="get_code">Получить код</string>
    <string name="confirmation">Подтверждение</string>
    <string name="enter_code">Введите 4-значный смс-код:</string>
    <string name="you_will_receive_code">В течении минуты на указанный номер %1$s вы получите 4-значный смс-код</string>
    <string name="registration_by_phone">Регистрация по номеру</string>
    <string name="send_code_again_after">Отправить снова через</string>
    <string name="ready">Готово</string>
    <string name="profile_setup">Настройка\nпрофиля</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="dob">Дата рождения</string>
    <string name="man">Муж</string>
    <string name="male">Муж</string>
    <string name="female">Жен</string>
    <string name="set_password">Установите код-пароль:</string>
    <string name="confirm">Подтвердить</string>
    <string name="app_entrance">Вход\nв приложение</string>
    <string name="card_activation">Активация карты</string>
    <string name="next">Далее</string>
    <string name="enter_card_number_and_exp">Введите номер и срок действия карты</string>
    <string name="warning_card_activation">Внимание!\nАктивация и возможности сервиса доступны держателям банковских карт Orient Finans Bank и Benefit</string>
    <string name="order_card">Заказать карту</string>
    <string name="activate">Активировать</string>
    <string name="card_name">Название карты:</string>
    <string name="card_activation_success">Карта успешно\nактивирована</string>
    <string name="skip">Пропустить</string>
    <string name="card_deposit">Пополнить карту</string>
    <string name="profile">Профиль</string>
    <string name="partners_category">Категория партнеров</string>
    <string name="payments_and_transfers">Платежи и переводы</string>
    <string name="useful">Полезное</string>
    <string name="payments_list">Список платежей</string>
    <string name="expenses_by_category">Расходы по категориям</string>
    <string name="limits_and_microloans">Лимиты микрозаймов</string>
    <string name="branches_and_atms">Отделения и банкоматы</string>
    <string name="support_team">Служба поддержки</string>
    <string name="loan_repayment">Погашение займа</string>
    <string name="cashback_sum">Кэшбэк на сумму</string>
    <string name="news_and_promos">Новости и акции</string>
    <string name="how_spend_cashback">На что потратить\nкэшбэк?</string>
    <string name="cashback_subtitle">На оплату коммунальных услуг,\nинтернета, мобильной связи и т.д.</string>
    <string name="go_to_list">Перейти к списку</string>
    <string name="user_terms">Условия пользования</string>
    <string name="user_terms_subtitle">Ознакомьтесь с условиями пользовательского соглашения.</string>
    <string name="yes_i_agree">Да, я согласен</string>
    <string name="terms_and_conditions">Пользовательское  соглашение</string>
    <string name="send_request">Отправить заявку</string>
    <string name="back">Назад</string>
    <string name="send_req_subtitle">Ваша заявка на открытие карты Benefit Supreme с лимитом микрозайма готова. Вы можете вернуться назад и проверить правильность заполнения полей, если это необходимо. Продолжим?</string>
    <string name="passport_photo_subtitle">Сделайте фото главной страницы паспорта. Убедитесь, что информация на фото отчётливо видна.</string>
    <string name="passport_photo">Фото паспорта</string>
    <string name="photo_with_passport">Фото с паспортом</string>
    <string name="with_passport_photo_subtitle">Сделайте селфи с главной страницей Вашего паспорта. Убедитесь, что информация на фото отчётливо видна.</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="inn">ИНН</string>
    <string name="work_prove">Справка с места работы</string>
    <string name="work_prove_subtitle">Сделайте фото справки с места работы. Убедитесь, что информация на фото отчётливо видна.</string>
    <string name="select_branch">Выберите филиал</string>
    <string name="select_branch_subtitle">Выберите филиал для обслуживания из списка или укажите на карте.</string>
    <string name="select_from_list">Выбрать из списка</string>
    <string name="select_on_map">Указать на карте</string>
    <string name="required_limit">Требуемый лимит</string>
    <string name="required_limit_subtitle">Укажите желаемую сумму лимита. Вы получите ответ после рассмотрения заявки.</string>
    <string name="enter_limit">Укажите лимит</string>
    <string name="close">Закрыть</string>
    <string name="send_req_end_text">Спасибо! После рассмотрения заявки с Вами свяжется специалист технической поддержки.</string>
    <string name="send_req_pre_end_text">Ваша заявка на открытие карты %1$s готова. Вы можете вернуться назад и проверить правильность заполнения полей, если это необходимо. Продолжим?</string>
    <string name="register_with_phone_number">Регистрация по номеру</string>
    <string name="i_accept_terms">Принимаю условия оферты</string>
    <string name="resend_sms">Отправить снова</string>
    <string name="resend_timer_sms">"Отправить снова через %1$s"</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="increased_cashback">Повышенный кэшбэк</string>
    <string name="settings">Настройки</string>
    <string name="select">Выбрать</string>
    <string name="russian">Русский</string>
    <string name="uzbek">Узбекский</string>
    <string name="english">Английский</string>
    <string name="change_phone_num">Сменить номер телефона</string>
    <string name="change_code">Сменить код входа</string>
    <string name="change_lang">Сменить язык</string>
    <string name="enter_new_phone_number">Введите новый номер телефона:</string>
    <string name="enter_old_entrance_code">Введите старый код входа:</string>
    <string name="enter_new_code">Введите новый код входа:</string>
    <string name="replace">Сменить</string>
    <string name="invite_friends_to_benefit">Пригласите друзей\nв Benefit</string>
    <string name="share_url">Поделиться ссылкой</string>
    <string name="invite_friends_to_benefit_subtitle">Если друг скачает и активируется в мобильном приложении Benefit по данной ссылке, вы оба получите по 50 000 бонусных BFT - баллов</string>
    <string name="share_using">Share using</string>
    <string name="limits">Лимиты</string>
    <string name="request_new_limit">Запросить новый лимит</string>
    <string name="new_limit">Новый лимит</string>
    <string name="current_limit">Текущий лимит</string>
    <string name="confirmed_limit">Одобренный лимит</string>
    <string name="for_period">На срок</string>
    <string name="used">Использовано</string>
    <string name="rate">Ставка</string>
    <string name="active_until">Действует до</string>
    <string name="more_details">Подробнее</string>
    <string name="creadit_history">Кредитная история</string>
    <string name="balance">Баланс</string>
    <string name="add_or_order_new_card">Добавить карту или заказать новую</string>
    <string name="add_card_sub_title">Активруйте новую банковскую карту Orient Finans Bank или Benefit</string>
    <string name="payments_brline_and_transfers">Платежи\nи переводы</string>
    <string name="top_up">Пополнить</string>
    <string name="make_depo_to_cards_of_benefit">Пополнение средств на карты Benefit</string>
    <string name="transfer_to_card">Перевод на карту</string>
    <string name="transfer_to_bank_cards">Перевод средств на банковские карты</string>
    <string name="transfer_to_friend">Перевод другу</string>
    <string name="transfer_fund_or_cashback_to_friends_from_contacts">Перевод средств или кэшбэка друзьям из списка контактов</string>
    <string name="pay">Оплатить</string>
    <string name="pay_services_mobile_operators_internet_providers">Оплата коммунальных услуг, мобильных операторов, интернет-провайдеров</string>
    <string name="game_gap">Игра “Гап”</string>
    <string name="ptwop_game_share_fund_between_friends">Командная P2P-игра. Делите между друзьями общий накопленный банк</string>
    <string name="phone">Телефон</string>
    <string name="actions_history">История операций</string>
    <string name="top_up_card">Пополнить карту</string>
    <string name="change_card_design">Сменить дизайн карты</string>
    <string name="block_card">Заблокировать карту</string>
    <string name="block_card_subtitle">Внимание! После блокировки вы не сможете расплачиваться картой и осуществлять переводы.</string>
    <string name="block">Заблокировать</string>
    <string name="cancel">Отмена</string>
    <string name="push_notifications">Push - уведомления</string>
    <string name="push_notifications_subtitle">Для Push - уведомлений Вам понадобится соединение с интернетом</string>
    <string name="sms_subtitle">Стоимость SMS - уведомлений 5 000 UZS в месяц</string>
    <string name="fill">Пополнить</string>
    <string name="from_own_cards">Со своих карт</string>
    <string name="from_any_bank_card">С любой банковской карты</string>
    <string name="by_cash">Наличными</string>
    <string name="request_friends">Запросить у друзей</string>
    <string name="bonused">Бонусная</string>
    <string name="latest_deposits">Последние пополнения</string>
    <string name="transfer_from_card">Перевод с карты</string>
    <string name="take_card_photo">Сфотографировать карту</string>
    <string name="enter_card_number">Введите номер карты</string>
    <string name="minimum_sum_is">Минимальная сумма %1$s сум</string>
    <string name="search">Найти</string>
    <string name="from_contacts">Из телефонной книги</string>
    <string name="search_friends_nearby">Поиск друзей\nпоблизости…</string>
    <string name="friends_nearby">Друзья\nпоблизости</string>
    <string name="request">Запросить</string>
    <string name="transfer">Перевести</string>
    <string name="write_tag_or_comment">Напишите #тег или комментарий</string>
    <string name="ongoing_money_transaction">Идёт отправка\nденег</string>
    <string name="transaction_completed_successfully">Перевод прошёл\nуспешно</string>
    <string name="categories">Категории</string>
    <string name="search_by_name_or_num">Найти по названию или #</string>
    <string name="card_number">Номер банковской карты</string>
    <string name="mm_slash_yy">ММ/ГГ</string>
    <string name="main_loan">Основной долг</string>
    <string name="warning_monthly_payment_must_be_paid_until_tenth">Ежемесячный платёж необходимо внести до 10 числа грядущего месяца</string>
    <string name="repayment_for">Погашение за январь</string>
    <string name="analytics">Аналитика</string>
    <string name="percentages">Проценты</string>
    <string name="to_payment">К оплате</string>
    <string name="by_categories">По категориям</string>
    <string name="available_amount">Доступный лимит</string>
    <string name="twelve_months">12 месяцев</string>
    <string name="catalog">Каталог</string>
    <string name="orders">Заказы</string>
    <string name="favourites">Избранное</string>
    <string name="sort">Сортировать</string>
    <string name="products_with_discount">Товары со скидкой</string>
    <string name="price_ascending">Сначала с низкой стоимостью</string>
    <string name="price_descending">Сначала с высокой стоимостью</string>
    <string name="products_popular">Популярные товары</string>
    <string name="products_latest">Последние товары</string>
</resources>