<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.benefit.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_partners_category"
        android:name="com.example.benefit.ui.main.partners_category.PartnersCategoryFragment"
        android:label="@string/partners_category"
        tools:layout="@layout/fragment_partners_category" />

    <fragment
        android:id="@+id/nav_payments"
        android:name="com.example.benefit.ui.main.payments.PaymentsFragment"
        android:label="@string/payments_and_transfers"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.benefit.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>