<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/market_navigation"
    app:startDestination="@+id/nav_catalog">

    <fragment
        android:id="@+id/nav_catalog"
        android:name="uz.magnumactive.benefit.ui.marketplace.CatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="uz.magnumactive.benefit.ui.marketplace.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="uz.magnumactive.benefit.ui.marketplace.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />

</navigation>