<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_top_rounded"
    android:orientation="vertical"
    android:paddingHorizontal="32dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/sort"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp">

        <RadioButton
            android:id="@+id/rbLatest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_orange"
            android:paddingStart="16dp"
            android:text="@string/products_latest" />

        <RadioButton
            android:id="@+id/rbSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_orange"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:text="@string/products_with_discount" />


        <RadioButton
            android:id="@+id/rbPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/rb_orange"
            android:paddingStart="16dp"
            android:text="@string/products_popular" />


        <RadioButton
            android:id="@+id/rbPriceAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/rb_orange"
            android:paddingStart="16dp"
            android:text="@string/price_ascending" />


        <RadioButton
            android:id="@+id/rbPriceDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/rb_orange"
            android:paddingStart="16dp"

            android:text="@string/price_descending" />


    </RadioGroup>

</LinearLayout>