<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.loans.LoanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolBarStyle"
            app:contentInsetLeft="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:layout_marginEnd="?attr/actionBarSize"
                    android:text="@string/limits"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="26dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/request_new_limit"
                    android:textColor="#b3000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />


                <Button
                    android:id="@+id/btnNewLimit"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="26dp"
                    android:background="@drawable/cb_orange_gray"
                    android:clickable="false"
                    android:text="@string/new_limit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/current_limit"
                    android:textColor="#b3000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="26dp"
                    android:background="@drawable/gradient_dark"
                    android:orientation="vertical"
                    android:padding="26dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/confirmed_limit"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="8 000 000 UZS" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/available_amount"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvConfirmedSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="6 000 000  UZS" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/for_period"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/twelve_months"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/used"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvUsed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="1 000 000 UZS" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/rate"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="18% годовых" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/active_until"
                        android:textColor="#ffe500"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvDeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="20.04.2021" />

                    <ProgressBar
                        android:id="@+id/progress"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginTop="30dp"
                        android:progressDrawable="@drawable/curved_progress_bar" />


                    <Button
                        android:id="@+id/btnDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="26dp"
                        android:background="@drawable/selector_more_details"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/more_details"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="26dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/creadit_history"
                    android:textColor="#b3000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.loans.LoanActivity">


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
